crates/harnx-tui/src/snapshots/harnx_tui__tests__action_menu_popup.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx 0.30.1  •  Type .help for commands, Tab to complete.
> hello  [1]








                    ┌Actions───────────────────────────────┐
                    │[e] Edit     [d] Delete   [i] Insert  │
                    │[c] Copy     [r] Rewind   [Esc] Cancel│
                    └──────────────────────────────────────┘







• Input
