crates/harnx-tui/src/snapshots/harnx_tui__tests__assistant_text_with_seq_number.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx 0.30.1  •  Type .help for commands, Tab to complete.
hello back  [5]



















• Input
