crates/harnx-tui/src/snapshots/harnx_tui__tests__basic_message_and_streaming_response.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
> Test message

Hello from the mock client!


















• 🤖  test-agent ▸ mock:mock-model
