crates/harnx-tui/src/snapshots/harnx_tui__tests__dump_session_without_session_in_tui.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Session Transcript──────────────────────────────────────────
Error: An explicit agent and session ID are required. Usage:
.dump session <agent> <id> [--format text|yaml|json]









────────────────────────────────────────────────────────────
 ↑↓/scroll  e/edit  d/delete  r/rewind  c/copy  ESC/back
