crates/harnx-tui/src/snapshots/harnx_tui__tests__help_in_tui.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
.macro                   Execute a macro
.mcp                     Manage MCP servers
.file                    Include files, directories, URLs or commands
.continue                Continue previous response
.regenerate              Regenerate last response
.copy                    Copy last response
.set                     Modify runtime settings
.set variable <name> <value> Set a session variable
.load variable <name> <file> Load a session variable value from a file
.title                   Show or (re)generate the session title
.set show_sequence_numbers Toggle [n] prefix in transcript (on/off)
.set show_timestamps     Toggle timestamp in transcript (on/off)
.delete                  Delete agents, sessions, RAGs, or macros
.delete message <n>      Delete a log entry by sequence number
.delete message <n>-<m>  Delete a range of log entries
.rewind <n>              Rewind session context to entry N (all later
entries excluded)
.exit                    Exit the interactive session

Type ::: to start multi-line editing, type ::: to finish it.
Press Ctrl+C to cancel the response, Ctrl+D to exit.
• Input
