crates/harnx-tui/src/snapshots/harnx_tui__tests__highlight_range.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx [VERSION]  •  Type .help
for commands, Tab to complete.
> Line 0

Line 1

> Line 2

Line 3



• Input
