crates/harnx-tui/src/snapshots/harnx_tui__tests__highlight_single_item.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx 0.30.1  •  Type .help
for commands, Tab to complete.
> Line 0

Line 1

> Line 2





• Input
