crates/harnx-tui/src/snapshots/harnx_tui__tests__info_agent_overlay_in_tui.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Compacted session───────────────────────────────────────────────────────
Error: agent 'overlay-agent' not found
















────────────────────────────────────────────────────────────────────────
 ↑↓/scroll  e/edit  d/delete  r/rewind  c/copy  ESC/back
