crates/harnx-tui/src/snapshots/harnx_tui__tests__info_session_overlay_in_tui.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Session Info────────────────────────────────────────────────────────────
Error: session 'overlay-session-test' not found for agent '<top-level>' 
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
                                                                        
────────────────────────────────────────────────────────────────────────
 ↑↓/scroll  e/edit  d/delete  r/rewind  c/copy  ESC/back
