crates/harnx-tui/src/snapshots/harnx_tui__tests__info_session_with_session_in_tui.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx 0.30.1  •  Type .help for commands, Tab to
complete.
💬  info-session-with-session-test
model               mock:mock-model
save_session        true










• 💬  info-session-with-session-test
