crates/harnx-tui/src/snapshots/harnx_tui__tests__input_word_wraps_long_line.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx 0.30.1  •
Type .help for commands, Tab
to complete.



• Input
the quick brown fox jumps over
 the lazy dog
